[package]
name = "munin-plugin"
version = "0.2.0"
edition = "2021"
authors = ["Jörg Jaspert <joerg@debian.org>"]
license = "LGPL-3.0-only"
keywords = [ "munin", "munin-plugin" ]
categories = [ "command-line-utilities", "development-tools" ]
repository = "https://github.com/Ganneff/munin-plugin"
description = "Ease writing of plugins for munin in Rust"

[dependencies]
anyhow = "1.0.57"
daemonize = "0.4.1"
fastrand = "1.7.0"
fs2 = "0.4.3"
log = "0.4.17"
spin_sleep = "1.1.1"
tempfile = "3.3.0"

[dev-dependencies]
procfs = "0.14.0"
tempfile = "3.3.0"
